# postgres-postgis-docsbox-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
corpus/: manifest.toml
examples/: opencode-config.json  sample_data.sql
src/postgres_postgis_docsbox_mcp/: __init__.py  __main__.py  corpus.py  db.py  postgis_reference.py  server.py  sql_validator.py  web.py
src/postgres_postgis_docsbox_mcp/tools/: __init__.py  docs.py  execute.py  introspect.py  postgis_help.py  run_locally.py
src/postgres_postgis_docsbox_mcp/web/: index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml
tests/: conftest.py  test_introspect_db.py  test_run_locally.py  test_sql_validator.py
