[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "postgres-postgis-docsbox-mcp"
version = "0.1.0"
description = "Streamable-HTTP MCP server giving LLM agents safe, read-only situational awareness of a PostgreSQL + PostGIS database (schema, samples, distinct values, SRIDs, FK graph, density picks, EXPLAIN-validated SELECT)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "afterrealism" }]
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.6",
  "starlette>=0.41",
  "uvicorn[standard]>=0.32",
  "httpx>=0.28",
  "pydantic>=2.10",
  "psycopg[binary,pool]>=3.2",
  "sqlglot>=25.0",
  "platformdirs>=4.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "anyio>=4.7",
]

[project.scripts]
postgres-postgis-docsbox-mcp = "postgres_postgis_docsbox_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/postgres_postgis_docsbox_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"corpus/manifest.toml" = "postgres_postgis_docsbox_mcp/_data/manifest.toml"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]
extend-safe-fixes = ["UP", "I"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["pydantic.Field"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "db: integration test that requires a live PostgreSQL/PostGIS database (run with --run-db)",
]
